[tool.poetry]
name = "tickets-hunter"
version = "0.1.0"
description = "多平台搶票自動化系統 - Tickets Hunter 搶票機器人"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
certifi = "2025.10.5"
chardet = "5.2.0"
chromedriver-autoinstaller-max = "1.0.6"
cryptography = "46.0.2"
ddddocr = "1.5.6"
idna = "3.11"
looseversion = "1.3.0"
nodriver = "0.48.1"
numpy = "2.2.6"
Pillow = "11.3.0"
playsound = "1.2.2"
pyperclip = "1.11.0"
selenium = "4.36.0"
tornado = "6.5.2"
undetected-chromedriver = "3.5.5"
urllib3 = "2.5.0"
opencv-python = "4.12.0.88"
onnxruntime = "1.23.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

